--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "ninjalist",
+  "name": "userslist",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watchAll"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.0-beta3",
+    "formik": "^2.2.6",
     "next": "10.0.7",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "^17.0.2",
+    "yup": "^0.32.9"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^11.2.6",
+    "babel-jest": "^26.6.3",
+    "enzyme": "^3.11.0",
+    "jest": "^26.6.3",
+    "node-mocks-http": "^1.10.1"
   }
 }
